# medmonics

./: .gitignore  README.md  app.py  check_structure.py  debug_challenge.py  pyproject.toml  setup_secrets.py  strip_batch_viewer.py  upload_to_gcs.py  verify_gcs.py
data/: batch_input.json  batch_requests.jsonl  batch_staging.json  latest_batch_job.txt
medmonics/: __init__.py  data_loader.py  pipeline.py  prompts.py  schemas.py  storage.py
scripts/: batch_retrieve.py  batch_submit.py
